--- a/OpenGLExample/OpenGLExample.vcxproj
+++ b/OpenGLExample/OpenGLExample.vcxproj
@@ -45,6 +45,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>.\include;.\include\glew;.\include\glfw;.\include\glm;$(IncludePath)</IncludePath>
     <LibraryPath>.\lib;.\lib\Release;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)bin\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
